--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -25,7 +25,36 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Views\Categories\" />
+      <_ContentIncludedByDefault Remove="Templates\ControllerGenerator\ApiControllerWithContext.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ControllerGenerator\MvcControllerWithContext.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ViewGenerator\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ViewGenerator\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ViewGenerator\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ViewGenerator\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ViewGenerator\Empty.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ViewGenerator\List.cshtml" />
+      <_ContentIncludedByDefault Remove="Templates\ViewGenerator\_ValidationScriptsPartial.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Details\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Details\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Details\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Details\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Details\Index.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Templates\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Templates\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Templates\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Templates\**" />
     </ItemGroup>
 
 </Project>
